--- a/styles/media.css
+++ b/styles/media.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width:700px)
 and (-webkit-device-pixel-ratio: 2)
-and (-webkit-device-pixel-ratio: 3){
+/*and (-webkit-device-pixel-ratio: 3)*/
+{
 
 
     body{
