--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,7 +5,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  //height: 100vh;
   background-color: blueviolet;
 
 }
@@ -13,12 +13,15 @@ body{
   font-family: Arial,sans-serif;
   background-color: darkslategrey;
   border-radius: 15px;
-  max-width: 500px;
+  width: 200px;
+  height: 290px;
   overflow: hidden;
+  margin-top: 50px;
 #display{
   width: 100%;
-  padding: 20px;
-  font-size: 5rem;
+  height: 25px;
+  padding: 7px;
+  font-size: 1.5rem;
   text-align: left;
   border:none;
   background-color: gray;
@@ -28,18 +31,18 @@ body{
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 10px;
-  padding:25px;
+  padding:5px;
 
 
 
 button{
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
+  width: 40px;
+  height:40px;
+  border-radius: 20px;
   border: none;
   background-color: darkgrey;
   color: white;
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
   &:hover{
