--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,10 +28,11 @@ body{
   color: white;
 }
 #keys{
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  gap: 10px;
-  padding:5px;
+  //display: grid;
+  //grid-template-columns: repeat(4,1fr);
+  //gap: 10px;
+  //padding:5px;
+  margin: 12px;
 
 
 
