--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,10 +26,7 @@ body {
   color: white;
 }
 #calculator #keys {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  padding: 5px;
+  margin: 12px;
 }
 #calculator #keys button {
   width: 40px;
