--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,7 @@
 body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: blueviolet;
+  width: 250px;
+  height: 300px;
 }
 
 #calculator {
@@ -13,7 +11,7 @@ body {
   width: 200px;
   height: 290px;
   overflow: hidden;
-  margin-top: 50px;
+  margin: 85px 85px;
 }
 #calculator #display {
   width: 100%;
@@ -34,7 +32,7 @@ body {
   border-radius: 20px;
   border: none;
   background-color: darkgrey;
-  color: white;
+  color: chartreuse;
   font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
