--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,11 +1,13 @@
 
 
 body{
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  //margin: 0;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
   background-color: blueviolet;
+  width: 250px;
+  height: 300px;
 
 }
 #calculator{
@@ -15,7 +17,7 @@ body{
   width: 200px;
   height: 290px;
   overflow: hidden;
-  margin-top: 50px;
+  margin: 85px 85px;
 #display{
   width: 100%;
   height: 25px;
@@ -37,7 +39,7 @@ button{
   border-radius: 20px;
   border: none;
   background-color: darkgrey;
-  color: white;
+  color: chartreuse;
   font-size: 1.5rem;
   font-weight: bold;
   cursor: pointer;
